# Sort

./: .gitignore  Makefile
Sort/: CMakeCache.txt  CMakeLists.txt  TriAlgo  cmake_install.cmake
Sort/src/: main.c
Sort/src/include/: data.h
list/: temperature
src/: fileInteraction.c
